Set up API layer to read configuration from appsettings.json

--- a/AuthServer.API/appsettings.json
+++ b/AuthServer.API/appsettings.json
@@ -1,4 +1,23 @@
 {
+  "TokenOptions": {
+    "Audience": [ "www.authserver.com", "www.appfirst.com", "www.appsecond.com", "www.appthird.com" ],
+    "Issuer": "www.authserver.com",
+    "AccessTokenExpiration": 5,
+    "RefreshTokenExpiration": 200,
+    "SecurityKey": "mysecuritykeymysecuritykeymysecuritykeymysecuritykey"
+  },
+  "Clients": [
+    {
+      "Id": "SpaApp",
+      "Secret": "secret",
+      "Audiences": [ "www.appfirst.com" ]
+    },
+    {
+      "Id": "MobileApp",
+      "Secret": "secret",
+      "Audiences": [ "www.appfirst.com", "www.appsecond.com" ]
+    }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
