Controllers Added CustomValidation Created Program.cs Configured

--- a/AuthServer.API/appsettings.json
+++ b/AuthServer.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=LAPTOP-1PLLIFRV\\SQLEXPRESS;Initial Catalog=TokenDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "TokenOptions": {
     "Audience": [ "www.authserver.com", "www.appfirst.com", "www.appsecond.com", "www.appthird.com" ],
     "Issuer": "www.authserver.com",
@@ -10,12 +13,12 @@
     {
       "Id": "SpaApp",
       "Secret": "secret",
-      "Audiences": [ "www.appfirst.com" ]
+      "Audiences": [ "www.appthird.com" ]
     },
     {
       "Id": "MobileApp",
       "Secret": "secret",
-      "Audiences": [ "www.appfirst.com", "www.appsecond.com" ]
+      "Audiences": [ "www.appthird.com", "www.appfourth.com" ]
     }
   ],
   "Logging": {
